# stopwatchcli

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md
include/: BigNum.h
src/: BigNum.cpp  main.cpp
